Fixed word break issue on mobile for game cards

--- a/app/assets/stylesheets/components/flipcard.scss
+++ b/app/assets/stylesheets/components/flipcard.scss
@@ -38,7 +38,6 @@
       box-shadow: 0 6px 8px 0 rgba(0,0,0,0.4);
       margin-top: -4px;
       padding: 10px 0 20px 0;
-      text-shadow: 1px 1px $primary-black;
       width: 100%;
       word-spacing: 100vw;
       @media (max-width: 550px) {
