--- a/app/assets/stylesheets/components/gamecard.scss
+++ b/app/assets/stylesheets/components/gamecard.scss
@@ -4,14 +4,15 @@
 	margin-bottom: 40px;
 	max-width: 400px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.3);
-  border-radius: 10px;
+  border-radius: 5px;
  	img {
- 		border-radius: 10px 10px 0 0;
+ 		border-radius: 5px 5px 0 0;
     max-width: 400px;
     width: 100%;
   }
   .gamecard-container {
     padding: 10px 0;
     margin-top: -3px;
+		word-spacing: 100vw;
   }
 }
